Fix JavaFX runtime dependency issues and add Maven-based launchers